MDEV-25856 : SIGSEGV in ha_myisammrg::append_create_info

For MERGE-tables we need to init children list before calling
show_create_table and then detach children before we continue
normal mysql_create_like_table execution.